<resources>
    <string name="App_Name" translatable="false">Unstoppable</string>
    <string name="DeeplinkScheme" translatable="false">unstoppable</string>
    <string name="Error_ParameterNotSet">Parameter is not set</string>
    <string name="LargeNumberFormat">%1$s%2$s</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Loading">Loading...</string>
    <string name="Alert_Restart">Restart</string>
    <string name="Alert_Skip" translatable="false">SKIP</string>
    <string name="Alert_Select" translatable="false">SELECT</string>
    <string name="Suspended">SUSPENDED</string>
    <string name="Action_Undo">UNDO</string>
    <string name="Button_Show">Show</string>
    <string name="Button_Hide">Hide</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Disable">Disable</string>
    <string name="Button_ScanQr">Scan QR Code</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Done">Done</string>
    <string name="Button_Retry">Retry</string>
    <string name="Button_Change">Change</string>
    <string name="Button_Add">Add</string>
    <string name="Button_Approve">Approve</string>
    <string name="Button_Confirm">Confirm</string>
    <string name="Button_Refresh">Refresh</string>
    <string name="Button_Connect">Connect</string>
    <string name="Button_Reject">Reject</string>
    <string name="Button_Disconnect">Disconnect</string>
    <string name="Button_Start">Start</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Advanced">Advanced</string>
    <string name="Button_Restore">Import</string>
    <string name="Button_WatchAddress">Watch Address</string>
    <string name="Button_Reset">Reset</string>
    <string name="Button_Reconnect">Reconnect</string>
    <string name="Button_Understand">I Understand</string>
    <string name="Button_Switch">Switch</string>
    <string name="Button_Remove">Remove</string>
    <string name="Button_Save">Save</string>
    <string name="Button_IAgree">I Agree</string>
    <string name="Button_Continue">Continue</string>
    <string name="Button_Send">Send</string>
    <string name="Button_Search">Search</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Copy">Copy</string>
    <string name="Button_Browser">Browser</string>
    <string name="Button_Delete">Delete</string>
    <string name="Button_LearnMore">Learn More</string>
    <string name="Button_Activate">Activate</string>
    <string name="Button_Sign">Sign</string>
    <string name="Button_Activating">Activating</string>
    <string name="Button_GetApiKeys">Get API Keys</string>
    <string name="Button_Login">Log In</string>
    <string name="Button_SignUp">Sign Up</string>
    <string name="Button_Submit">Submit</string>
    <string name="Button_TryAgain">Try Again</string>
    <string name="Button_Share">Share</string>
    <string name="Button_Apply">Apply</string>
    <string name="Button_SetAmount">Set Amount</string>
    <string name="Error_OutOfRange">Can\'t be less than %1$s or more than %2$s</string>
    <string name="Error_NotInteger">Wrong integer number</string>
    <string name="Error">Error</string>
    <string name="NotAvailable">n/a</string>
    <string name="Any">Any</string>
    <string name="SyncError">Sync error. Try Again</string>
    <string name="FooterText" translatable="false">© Horizontal Systems 2022</string>
    <string name="PercentTitle">Percent</string>
    <string name="Keyboard">Keyboard</string>
    <string name="AccountRecovery_Note">Note</string>
    <string name="AccountRecovery_MigrationRecommended">This wallet seems to use a non-standard character in its recovery phrase and/or a passphrase. If you do not see a balance or transactions please read below for details.\n\nCLICK TO GET MORE INFO</string>
    <string name="AccountRecovery_MigrationRequired">This is a non-standard wallet. \n\nCLICK TO GET MORE INFO</string>
    <string name="Intro_Wallet_Screen1Description">Be Unstoppable</string>
    <string name="Intro_Wallet_Screen2Title">Unchain Assets</string>
    <string name="Intro_Wallet_Screen2Description">Don\'t lock yourself in and don\'t let others do that to you.</string>
    <string name="Intro_Wallet_Screen3Title">Go Borderless</string>
    <string name="Intro_Wallet_Screen3Description">Bypass conditional barriers and access markets globally.</string>
    <string name="Intro_Wallet_Screen4Title">Stay Private</string>
    <string name="Intro_Wallet_Screen4Description">Do not leak your private and financial data to the world.</string>
    <string name="RootedDevice_Button_Understand">I Understand</string>
    <string name="Welcome_PrivacySettings">Privacy Settings</string>
    <string name="CreateWallet_Advanced_Title">Advanced</string>
    <string name="CreateWallet_Mnemonic">Recovery Phrase</string>
    <string name="CreateWallet_Wordlist">Word List</string>
    <string name="Passphrase">Passphrase</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassphrase">Confirm</string>
    <string name="CreateWallet_N_WordsRecommended">%s words (recommended)</string>
    <string name="CreateWallet_N_Words">%s words</string>
    <string name="CreateWallet_PassphraseConfirm">Confirm</string>
    <string name="CreateWallet_Error_EmptyPassphrase">Passphrase cannot be empty</string>
    <string name="CreateWallet_Error_PassphraseForbiddenSymbols">Please use only supported symbols: <![CDATA[A-Z a-z 0-9 \' " ` & / ? ! : ; . , ~ * $ = + - [ ](){} <> \ _ # @ | % ]]></string>
    <string name="CreateWallet_Error_InvalidConfirmation">Passphrase confirmation does not match</string>
    <string name="CreateWallet_PassphraseDescription">Passphrases add additional security layer for wallets. To restore such wallet a user required both a recovery phrase as well as a passphrase.\n\nPassphrases also make it easy for users to have many multi-coin wallets using a single mnemonic but different passwords.</string>
    <string name="Language_English">English</string>
    <string name="Language_Japanese">Japanese</string>
    <string name="Language_Korean">Korean</string>
    <string name="Language_Spanish">Spanish</string>
    <string name="Language_SimplifiedChinese">Chinese (Simplified)</string>
    <string name="Language_TraditionalChinese">Chinese (Traditional)</string>
    <string name="Language_French">French</string>
    <string name="Language_Italian">Italian</string>
    <string name="Language_Czech">Czech</string>
    <string name="Language_Portuguese">Portuguese</string>
    <string name="RateApp_Title_Rate_This_App">GM!</string>
    <string name="RateApp_Description_Rate_This_App">Enjoying Unstoppable? Share feedback and ideas to take it further.</string>
    <string name="RateApp_Button_RateIt">Rate It</string>
    <string name="RateApp_Button_NotNow">Not now</string>
    <string name="Restore_Advanced_Title">Advanced</string>
    <string name="Restore_Mnemonic_Description">Enter your wallet recovery phrase (aka mnemonic) which consists of 12, 15, 18, 21 or 24 words and may include additional alphanumeric password.</string>
    <string name="Restore_ValidationFailed">Incorrect Key</string>
    <string name="FeeInfo_Title">Transaction Speed</string>
    <string name="FeeInfo_Description">Both Bitcoin and Ethereum blockchains require users to pay network fees when sending transactions. The fees are higher when a lot of transactions are taking place on the network and lower when the blockchain is less busy.</string>
    <string name="FeeInfo_Slow">Low</string>
    <string name="FeeInfo_SlowDescription">Selecting a value from this range may result in a transaction being held as pending for hours, or being rejected. The lower the value, the longer it will take for the transaction to confirm.</string>
    <string name="FeeInfo_Average">Recommended</string>
    <string name="FeeInfo_AverageDescription">Typically, the recommended fee value should be sufficient for a transaction to be processed within minutes or an hour for Bitcoin and within minutes for Ethereum.</string>
    <string name="FeeInfo_Fast">High</string>
    <string name="FeeInfo_FastDescription">For transactions where priority is important, we recommend using the high fee value. It\'s expected to be sufficient for a transaction to be completed within 10 minutes for Bitcoin and within 1-2 minutes for Ethereum.</string>
    <string name="SwapSettings_SlippageTitle">Slippage Tolerance</string>
    <string name="SwapSettings_SlippageDescription">Your transaction will revert if the price changes unfavorably by more than this percentage</string>
    <string name="SwapSettings_DeadlineTitle">Transaction Deadline</string>
    <string name="SwapSettings_DeadlineDescription">Your transaction will revert if it is pending for more than this long.</string>
    <string name="SwapSettings_RecipientAddressTitle">Recipient Address</string>
    <string name="SwapSettings_RecipientAddressDescription">After the exchange operation, the amount will be transferred to the specified address</string>
    <string name="TransactionInfo_Status">Status</string>
    <string name="StatusInfo_Pending">Pending</string>
    <string name="StatusInfo_Confirmed">Completed</string>
    <string name="StatusInfo_Failed">Failed</string>
    <string name="StatusInfo_PendingDescription">The transaction has not been confirmed on the blockchain yet. Transactions sent with a recommended or higher fee setting are generally processed within a few minutes. Transactions sent with a low fee may remain pending for a few hours or even days, and can even be rejected. Note that status of an individual transaction in Unstoppable wallet interface typically updated with a short delay.</string>
    <string name="StatusInfo_ConfirmedDescription">Transaction is completed and considered permanent and irreversible.</string>
    <string name="StatusInfo_FailedDescription">The transaction did not get processed and no value transfer took place. Depending on the fail reason, some failed transactions may consume transaction fees. Transactions that were replaced or cancelled by another transaction do not consume transaction fees and will also appear sa failed. The Unstoppable app is unable to show the reason for failed transactions, but users are able to look it up themselves on a public block explorer i.e. etherscan.io.</string>
    <string name="Settings_SecurityCenter">Security</string>
    <string name="Settings_Terms">Terms</string>
    <string name="Settings_ShareThisWallet">Tell Friends</string>
    <string name="Settings_AppStatus">App Status</string>
    <string name="Settings_RateUs">Rate Us</string>
    <string name="SettingsAboutApp_Title">About App</string>
    <string name="SettingsAboutApp_Github" translatable="false">Github</string>
    <string name="SettingsAboutApp_Site">Website</string>
    <string name="SettingsSecurity_Privacy">Privacy</string>
    <string name="SettingsSecurity_Biometric_Authentication">Biometrics</string>
    <string name="SettingsSecurity_Info_Biometric_Authentication">Enabling Biometric Authentication may potentially weaken the security of your device when compared to plain PIN lock code.</string>
    <string name="SettingsSecurity_EnablePin">Enable Passcode</string>
    <string name="SettingsSecurity_EditPin">Edit Passcode</string>
    <string name="SettingsContact_Title">Contact Us</string>
    <string name="CoinPage_AddToWallet">Add To Wallet</string>
    <string name="CoinPage_InWallet">In Wallet</string>
    <string name="CoinPage_Favorite">Favorite</string>
    <string name="CoinPage_Unfavorite">Unfavorite</string>
</resources>