<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAddToWallet"
        android:icon="@drawable/ic_add_to_wallet_2_24"
        android:title="@string/CoinPage_AddToWallet"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuInWallet"
        android:icon="@drawable/ic_in_wallet_dark_24"
        android:title="@string/CoinPage_InWallet"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/ic_star_24"
        android:iconTint="@color/grey"
        android:title="@string/CoinPage_Favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuUnfavorite"
        android:icon="@drawable/ic_filled_star_24"
        app:iconTint="@color/jacob"
        android:title="@string/CoinPage_Unfavorite"
        app:showAsAction="always" />

</menu>
