<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/TransactionInfo_Status"
        app:titleTextColor="?TitleColor" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                style="@style/Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/StatusInfo_Pending"
                android:textColor="?ColorJacob" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/StatusInfo_PendingDescription"
                android:textColor="?ColorBran" />

            <TextView
                style="@style/Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/StatusInfo_Pending"
                android:textColor="?ColorJacob" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/StatusInfo_ReceivingDescription"
                android:textColor="?ColorBran" />

            <TextView
                style="@style/Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/StatusInfo_Confirmed"
                android:textColor="?ColorJacob" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/StatusInfo_ConfirmedDescription"
                android:textColor="?ColorBran" />

            <TextView
                style="@style/Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/StatusInfo_Failed"
                android:textColor="?ColorJacob" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="44dp"
                android:text="@string/StatusInfo_FailedDescription"
                android:textColor="?ColorBran" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
