<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <io.horizontalsystems.bankwallet.ui.extensions.AddressInputView
                android:id="@+id/recipientAddressInputView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:description="@string/SwapSettings_RecipientAddressDescription"
                app:layout_constraintEnd_toEndOf="@id/endBorder"
                app:layout_constraintStart_toStartOf="@id/startBorder"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/SwapSettings_RecipientAddressTitle" />

            <io.horizontalsystems.bankwallet.ui.extensions.InputWithButtonsView
                android:id="@+id/slippageInputView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:inputType="numberDecimal"
                app:description="@string/SwapSettings_SlippageDescription"
                app:layout_constraintEnd_toEndOf="@id/endBorder"
                app:layout_constraintStart_toStartOf="@id/startBorder"
                app:layout_constraintTop_toBottomOf="@id/recipientAddressInputView"
                app:title="@string/SwapSettings_SlippageTitle" />

            <io.horizontalsystems.bankwallet.ui.extensions.InputWithButtonsView
                android:id="@+id/deadlineInputView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:inputType="number"
                app:description="@string/SwapSettings_DeadlineDescription"
                app:layout_constraintEnd_toEndOf="@id/endBorder"
                app:layout_constraintStart_toStartOf="@id/startBorder"
                app:layout_constraintTop_toBottomOf="@id/slippageInputView"
                app:title="@string/SwapSettings_DeadlineTitle" />

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/buttonApplyCompose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/endBorder"
                app:layout_constraintStart_toStartOf="@id/startBorder"
                app:layout_constraintTop_toBottomOf="@+id/deadlineInputView"
                tools:layout_height="50dp"
                tools:layout_marginBottom="12dp"
                tools:layout_marginTop="28dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
